# src/api/controllers/user.ts
@@ -23,6 +23,28 @@ export function auth(req: express.Request, res: express.Response, next: express.
     })
 }
 
+export function login(req: express.Request, res: express.Response): void {
+  const {email, password} = req.body
+
+  UserService.login(email, password)
+    .then(resp => {
+      if ((resp as any).error) {
+        if ((resp as ErrorResponse).error.type === 'invalid_credentials') {
+          writeJsonResponse(res, 404, resp)
+        } else {
+          throw new Error(`unsupported ${resp}`)
+        }
+      } else {
+        const {userId, token, expireAt} = resp as {token: string, userId: string, expireAt: Date}
+        writeJsonResponse(res, 200, {userId: userId, token: token}, {'X-Expires-After': expireAt.toISOString()})
+      }
+    })
+    .catch((err: any) => {
+      logger.error(`login: ${err}`)
+      writeJsonResponse(res, 500, {error: {type: 'internal_server_error', message: 'Internal Server Error'}})
+    })
+}
+
 export function createUser(req: express.Request, res: express.Response): void {
   const {email, password, name} = req.body
 
