# src/api/services/user.ts
@@ -1,20 +1,80 @@
+import fs from 'fs'
+import jwt, {SignOptions, VerifyErrors, VerifyOptions} from 'jsonwebtoken'
+
 import User from '@exmpl/api/models/user'
+import config from '@exmpl/config'
 import logger from '@exmpl/utils/logger'
 
 export type ErrorResponse = {error: {type: string, message: string}}
 export type AuthResponse = ErrorResponse | {userId: string}
 export type CreateUserResponse = ErrorResponse | {userId: string}
+export type LoginUserResponse = ErrorResponse | {token: string, userId: string, expireAt: Date}
+
+const privateKey = fs.readFileSync(config.privateKeyFile)
+const privateSecret = {
+  key: privateKey, 
+  passphrase: config.privateKeyPassphrase
+}
+const signOptions: SignOptions = {
+  algorithm: 'RS256',
+  expiresIn: '14d'
+}
+
+const publicKey = fs.readFileSync(config.publicKeyFile)
+const verifyOptions: VerifyOptions = {
+  algorithms: ['RS256']
+}
 
 function auth(bearerToken: string): Promise<AuthResponse> {
   return new Promise(function(resolve, reject) {
     const token = bearerToken.replace('Bearer ', '')
-    if (token === 'fakeToken') {
-      resolve({userId: 'fakeUserId'})
-      return
+    jwt.verify(token, publicKey, verifyOptions, (err: VerifyErrors | null, decoded: object | undefined) => {
+      if (err === null && decoded !== undefined) {
+        const d = decoded as {userId?: string, exp: number}
+        if (d.userId) {
+          resolve({userId: d.userId})
+          return
+        }
+      }
+      resolve({error: {type: 'unauthorized', message: 'Authentication Failed'}})
+    })
+  })
+}
+
+function createAuthToken(userId: string): Promise<{token: string, expireAt: Date}> {
+  return new Promise(function(resolve, reject) {
+    jwt.sign({userId: userId}, privateSecret, signOptions, (err: Error | null, encoded: string | undefined) => {
+      if (err === null && encoded !== undefined) {
+        const expireAfter = 2 * 604800 /* two weeks */
+        const expireAt = new Date()
+        expireAt.setSeconds(expireAt.getSeconds() + expireAfter)
+        
+        resolve({token: encoded, expireAt: expireAt})
+      } else {
+        reject(err)
+      }
+    })
+  })
+}
+
+async function login(login: string, password: string): Promise<LoginUserResponse> {
+  try {
+    const user = await User.findOne({email: login})
+    if (!user) {
+      return {error: {type: 'invalid_credentials', message: 'Invalid Login/Password'}}
     }
 
-    resolve({error: {type: 'unauthorized', message: 'Authentication Failed'}})
-  })
+    const passwordMatch = await user.comparePassword(password)
+    if (!passwordMatch) {
+      return {error: {type: 'invalid_credentials', message: 'Invalid Login/Password'}}
+    }
+
+    const authToken = await createAuthToken(user._id.toString())
+    return {userId: user._id.toString(), token: authToken.token, expireAt: authToken.expireAt}
+  } catch (err) {
+    logger.error(`login: ${err}`)
+    return Promise.reject({error: {type: 'internal_server_error', message: 'Internal Server Error'}})
+  }
 }
 
 function createUser(email: string, password: string, name: string): Promise<CreateUserResponse> {
@@ -35,4 +95,4 @@ function createUser(email: string, password: string, name: string): Promise<Crea
   })
 }
 
-export default {auth: auth, createUser: createUser}
+export default {auth: auth, createAuthToken: createAuthToken, login: login, createUser: createUser}
